tests/integration/snapshots/integration__workspace_symbol__workspace_symbol_fuzzy_match.snap
---
source: tests/integration/workspace_symbol.rs
expression: response
---
[
  {
    "name": "MyTable",
    "kind": 5,
    "location": {
      "uri": "[ROOT_URI]/schema.fbs",
      "range": {
        "start": {
          "line": 1,
          "character": 6
        },
        "end": {
          "line": 1,
          "character": 13
        }
      }
    }
  },
  {
    "name": "MyStruct",
    "kind": 23,
    "location": {
      "uri": "[ROOT_URI]/schema.fbs",
      "range": {
        "start": {
          "line": 5,
          "character": 7
        },
        "end": {
          "line": 5,
          "character": 15
        }
      }
    }
  }
]
