tests/integration/snapshots/integration__workspace_symbol__workspace_symbol_returns_all_symbols.snap
---
source: tests/integration/workspace_symbol.rs
expression: response
---
[
  {
    "name": "MyEnum",
    "kind": 10,
    "location": {
      "uri": "[ROOT_URI]/schema.fbs",
      "range": {
        "start": {
          "line": 9,
          "character": 5
        },
        "end": {
          "line": 9,
          "character": 11
        }
      }
    }
  },
  {
    "name": "MyStruct",
    "kind": 23,
    "location": {
      "uri": "[ROOT_URI]/schema.fbs",
      "range": {
        "start": {
          "line": 5,
          "character": 7
        },
        "end": {
          "line": 5,
          "character": 15
        }
      }
    }
  },
  {
    "name": "MyTable",
    "kind": 5,
    "location": {
      "uri": "[ROOT_URI]/schema.fbs",
      "range": {
        "start": {
          "line": 1,
          "character": 6
        },
        "end": {
          "line": 1,
          "character": 13
        }
      }
    }
  },
  {
    "name": "MyUnion",
    "kind": 11,
    "location": {
      "uri": "[ROOT_URI]/schema.fbs",
      "range": {
        "start": {
          "line": 14,
          "character": 6
        },
        "end": {
          "line": 14,
          "character": 13
        }
      }
    }
  },
  {
    "name": "Service",
    "kind": 19,
    "location": {
      "uri": "[ROOT_URI]/schema.fbs",
      "range": {
        "start": {
          "line": 18,
          "character": 12
        },
        "end": {
          "line": 18,
          "character": 19
        }
      }
    }
  }
]
